--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,15 @@ html, body {
     height: 150px;
 }
 
+.projects-header {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    padding-left: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .main-content {
     background-color:aliceblue;
     grid-row: 2 / 6;
@@ -46,6 +55,7 @@ html, body {
 .icon, .tabs, .settings {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
+    font-weight: 600;
 }
 
 .icon {
@@ -100,6 +110,7 @@ html, body {
 
 .icons {
     background-color:white;
+    font-weight: 600;
     grid-row: 1 / 2;
     grid-column: 4 / 6;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -113,6 +124,7 @@ html, body {
 
 .greeting {
     background-color:white;
+    font-weight: 600;
     grid-row: 2 / 3;
     grid-column: 1 / 4;
     display: grid;
@@ -132,6 +144,7 @@ html, body {
 .name-and-tag {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
+    font-weight: 600;
     font-size: 20px;
     grid-column: 3 / 9;
     grid-row: 2 / 4;
@@ -140,6 +153,7 @@ html, body {
 .hi {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
+
     font-size: 16px;
     grid-column: 3 / 9;
     grid-row: 1 / 2;
@@ -168,3 +182,117 @@ html, body {
     padding: 5px;
 }
 
+/* style main content */
+.main-content {
+    display: grid;
+    grid-template-columns: repeat(8, 12.5fr);
+    grid-template-rows: 100fr;
+}
+
+.projects-container {
+    grid-column: 1 / 7;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: repeat(2, 50fr);
+    grid-template-rows: repeat(3, 33.33fr);
+    gap: 20px;
+    margin: 20px;
+}
+
+.announcements-and-trending {
+    grid-column: 7 / 9;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-rows: repeat(2, 50fr);
+    grid-template-columns: 100fr;
+}
+
+.announcements {
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    margin: 20px;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px
+}
+
+.trending {
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    margin-left: 0;
+    margin-top: 0;
+    gap: 30px;
+    padding: 30px;
+}
+
+.post {
+    display: flex;
+    gap: 20px
+}
+
+.tag {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: 14px;
+}
+
+.post {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightslategray;
+    font-size: 14px;
+}
+
+.sub-label {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.sub-text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightslategray;
+    font-size: 12px;
+}
+
+.project {
+    background-color: white;
+    border-left: 10px solid gold;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.pp {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.tag {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2
+}
+
+.post {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3
+}
+
+.label {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.text {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightslategray
+}
